// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot if e-mail account 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Profile />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <ScrollView
        keyboardShouldPersistTaps="always"
        scrollEnabled={true}
      >
        <ListItem
          icon="ios-mail"
          iconVisible={true}
          text={undefined}
        />
        <ListItemSeparator />
      </ScrollView>,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          null,
          <ListItem
            icon="ios-mail"
            iconVisible={true}
            text={undefined}
          />,
          <ListItemSeparator />,
        ],
        "keyboardShouldPersistTaps": "always",
        "scrollEnabled": true,
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "icon": "ios-mail",
            "iconVisible": true,
            "text": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <ScrollView
          keyboardShouldPersistTaps="always"
          scrollEnabled={true}
        >
          <ListItem
            icon="ios-mail"
            iconVisible={true}
            text={undefined}
          />
          <ListItemSeparator />
        </ScrollView>,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            null,
            <ListItem
              icon="ios-mail"
              iconVisible={true}
              text={undefined}
            />,
            <ListItemSeparator />,
          ],
          "keyboardShouldPersistTaps": "always",
          "scrollEnabled": true,
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-mail",
              "iconVisible": true,
              "text": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should match snapshot if facebook account 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Profile />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <ScrollView
        keyboardShouldPersistTaps="always"
        scrollEnabled={true}
      >
        <View>
          <ListItem
            avatar={undefined}
            iconVisible={true}
            text="John Doe"
          />
          <ListItemSeparator />
        </View>
        <ListItem
          icon="ios-mail"
          iconVisible={true}
          text={undefined}
        />
        <ListItemSeparator />
      </ScrollView>,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View>
            <ListItem
              avatar={undefined}
              iconVisible={true}
              text="John Doe"
            />
            <ListItemSeparator />
          </View>,
          <ListItem
            icon="ios-mail"
            iconVisible={true}
            text={undefined}
          />,
          <ListItemSeparator />,
        ],
        "keyboardShouldPersistTaps": "always",
        "scrollEnabled": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <ListItem
                avatar={undefined}
                iconVisible={true}
                text="John Doe"
              />,
              <ListItemSeparator />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "avatar": undefined,
                "iconVisible": true,
                "text": "John Doe",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "icon": "ios-mail",
            "iconVisible": true,
            "text": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <ScrollView
          keyboardShouldPersistTaps="always"
          scrollEnabled={true}
        >
          <View>
            <ListItem
              avatar={undefined}
              iconVisible={true}
              text="John Doe"
            />
            <ListItemSeparator />
          </View>
          <ListItem
            icon="ios-mail"
            iconVisible={true}
            text={undefined}
          />
          <ListItemSeparator />
        </ScrollView>,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <View>
              <ListItem
                avatar={undefined}
                iconVisible={true}
                text="John Doe"
              />
              <ListItemSeparator />
            </View>,
            <ListItem
              icon="ios-mail"
              iconVisible={true}
              text={undefined}
            />,
            <ListItemSeparator />,
          ],
          "keyboardShouldPersistTaps": "always",
          "scrollEnabled": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <ListItem
                  avatar={undefined}
                  iconVisible={true}
                  text="John Doe"
                />,
                <ListItemSeparator />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "avatar": undefined,
                  "iconVisible": true,
                  "text": "John Doe",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-mail",
              "iconVisible": true,
              "text": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
